# git-cc

./: .gitignore  LICENSE  README.ja.md  README.md  install.sh  pyproject.toml
scripts/: eval-against-history.sh
src/git_cc/: __main__.py  changes.py  cli.py  config.py  git.py  heuristics.py  init_cmd.py  llm.py
src/git_cc/templates/: default-config.toml
src/git_cc/templates/cursor/rules/: git-commit.mdc
src/git_cc/templates/cursor/skills/commit-message/: reference.md
src/git_scribe/: __main__.py  changes.py  cli.py  config.py  editor.py  git.py  heuristics.py  init_cmd.py  prompt.py  validator.py
src/git_scribe/templates/: default-config.toml  default-rules.md
src/git_scribe/templates/cursor/skills/commit-message/: SKILL.md
tests/: test_config.py  test_heuristics.py  test_prompt.py  test_validator.py
