[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "git-cc"
version = "0.1.0"
description = "AI-assisted Conventional Commits CLI: generate, review, commit, and push."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ookuni", email = "dev@ookuni-asset.com" }]
keywords = ["git", "commit", "conventional-commits", "ai", "llm", "cli", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
git-cc = "git_cc.cli:main"

# [project.urls]   # private use — uncomment when publishing
# Homepage   = "https://github.com/<owner>/git-cc"
# Repository = "https://github.com/<owner>/git-cc"

[tool.hatch.build.targets.wheel]
packages = ["src/git_cc"]

[tool.hatch.build.targets.sdist]
include = ["src/git_cc", "README.md", "LICENSE", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
